# azfunc-boot

./: .coveragerc  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: gitflow-pr-guard.yml  gitflow-pr-guards.yml  publish-pypi.yml  publish-testpypi.yml
example/: README.md  function_app.py  host.json
example/clients/: example_disposable_client.py
example/controllers/: example_controller.py
example/registries/: clients_registry.py  services_registry.py
example/services/: example_service.py
src/azfunc_boot/: __init__.py
src/azfunc_boot/bootstrap/: app_factory.py
src/azfunc_boot/common/: disposable.py
src/azfunc_boot/common/exceptions/: not_found_error.py  validation_error.py
src/azfunc_boot/config/: configuration.py
src/azfunc_boot/di/: dependency_injector.py  scope.py
src/azfunc_boot/mvc/: base_controller.py  controller_discovery.py  scoped_blueprint.py  trigger_decorator.py  trigger_wrapper.py
src/azfunc_boot/registry/: base_service_registry.py  discovery.py
tests/src/azfunc_boot/bootstrap/: test_app_factory.py
tests/src/azfunc_boot/config/: test_configuration.py
tests/src/azfunc_boot/di/: test_dependency_injector.py  test_scope.py
tests/src/azfunc_boot/mvc/: test_base_controller.py  test_controller_discovery.py  test_scoped_blueprint.py  test_trigger_decorator.py  test_trigger_wrapper.py
tests/src/azfunc_boot/registry/: test_base_service_registry.py  test_discovery.py
