[tool.poetry]
name = "azfunc-boot"
version = "0.1.1"
description = "A powerful framework for building Azure Functions applications with built-in dependency injection and controller-based architecture"
authors = ["Santiago Vasquez Gomez <santivasquez1@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/santiagovasquez1/azfunc-boot"
repository = "https://github.com/santiagovasquez1/azfunc-boot"
keywords = ["azure", "functions", "dependency-injection", "framework", "mvc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[tool.poetry.dependencies]
python = "^3.11"
azure-functions = ">=1.21.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"